src/lang/CalcParser.ts
// Generated from ./src/lang/Calc.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CalcListener } from "./CalcListener";
import { CalcVisitor } from "./CalcVisitor";


export class CalcParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly POW = 4;
	public static readonly MUL = 5;
	public static readonly DIV = 6;
	public static readonly ADD = 7;
	public static readonly SUB = 8;
	public static readonly TRUE = 9;
	public static readonly FALSE = 10;
	public static readonly NUMBER = 11;
	public static readonly WHITESPACE = 12;
	public static readonly NEWLINE = 13;
	public static readonly SEMICOL = 14;
	public static readonly RULE_prog = 0;
	public static readonly RULE_stat_end = 1;
	public static readonly RULE_types = 2;
	public static readonly RULE_declare_types = 3;
	public static readonly RULE_arg_type = 4;
	public static readonly RULE_arg_value = 5;
	public static readonly RULE_block_stat = 6;
	public static readonly RULE_stat = 7;
	public static readonly RULE_expr = 8;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "stat_end", "types", "declare_types", "arg_type", "arg_value", 
		"block_stat", "stat", "expr",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.'", "'('", "')'", "'^'", "'*'", "'/'", "'+'", "'-'", "'true'", 
		"'false'", undefined, undefined, undefined, "';'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "POW", "MUL", "DIV", "ADD", 
		"SUB", "TRUE", "FALSE", "NUMBER", "WHITESPACE", "NEWLINE", "SEMICOL",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CalcParser._LITERAL_NAMES, CalcParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CalcParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Calc.g4"; }

	// @Override
	public get ruleNames(): string[] { return CalcParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CalcParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CalcParser._ATN, this);
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let _localctx: ProgContext = new ProgContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CalcParser.RULE_prog);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 21;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CalcParser.T__6) | (1 << CalcParser.TRUE) | (1 << CalcParser.FALSE) | (1 << CalcParser.LOGICALNOT) | (1 << CalcParser.NUMBER) | (1 << CalcParser.NEWLINE))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (CalcParser.LET - 33)) | (1 << (CalcParser.VAR - 33)) | (1 << (CalcParser.FUNC - 33)) | (1 << (CalcParser.RTN - 33)) | (1 << (CalcParser.ID - 33)) | (1 << (CalcParser.STR - 33)))) !== 0)) {
				{
				{
				this.state = 18;
				this.stat();
				}
				}
				this.state = 23;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CalcParser.T__1) | (1 << CalcParser.TRUE) | (1 << CalcParser.FALSE) | (1 << CalcParser.NUMBER) | (1 << CalcParser.NEWLINE))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stat_end(): Stat_endContext {
		let _localctx: Stat_endContext = new Stat_endContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CalcParser.RULE_stat_end);
		try {
			this.state = 31;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 24;
				this.match(CalcParser.NEWLINE);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 25;
				this.match(CalcParser.SEMICOL);
				this.state = 26;
				this.match(CalcParser.NEWLINE);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 27;
				this.match(CalcParser.EOF);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 28;
				this.match(CalcParser.SEMICOL);
				this.state = 29;
				this.match(CalcParser.EOF);
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 30;
				this.match(CalcParser.SEMICOL);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public types(): TypesContext {
		let _localctx: TypesContext = new TypesContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CalcParser.RULE_types);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 33;
			_la = this._input.LA(1);
			if (!(((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & ((1 << (CalcParser.INT - 35)) | (1 << (CalcParser.DOUBLE - 35)) | (1 << (CalcParser.BOOL - 35)) | (1 << (CalcParser.STRING - 35)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declare_types(): Declare_typesContext {
		let _localctx: Declare_typesContext = new Declare_typesContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CalcParser.RULE_declare_types);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 35;
			_la = this._input.LA(1);
			if (!(_la === CalcParser.LET || _la === CalcParser.VAR)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arg_type(): Arg_typeContext {
		let _localctx: Arg_typeContext = new Arg_typeContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CalcParser.RULE_arg_type);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 38;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CalcParser.NUMBER:
				{
				_localctx = new NumberContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 31;
				this.match(CalcParser.NUMBER);
				}
				break;
			case CalcParser.TRUE:
				{
				_localctx = new TrueContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 32;
				this.match(CalcParser.TRUE);
				}
				break;
			case CalcParser.FALSE:
				{
				_localctx = new FalseContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 33;
				this.match(CalcParser.FALSE);
				}
				break;
			case CalcParser.T__1:
				{
				_localctx = new ParenthesesContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 34;
				this.match(CalcParser.T__1);
				this.state = 35;
				(_localctx as ParenthesesContext)._inner = this.expr(0);
				this.state = 36;
				this.match(CalcParser.T__2);
				}
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 60;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 58;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
					case 1:
						{
						_localctx = new DecimalContext(new ExprContext(_parentctx, _parentState));
						(_localctx as DecimalContext)._int = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 40;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 41;
						this.match(CalcParser.T__0);
						this.state = 42;
						(_localctx as DecimalContext)._frac = this.expr(8);
						}
						break;

					case 2:
						{
						_localctx = new PowerContext(new ExprContext(_parentctx, _parentState));
						(_localctx as PowerContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 43;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 44;
						(_localctx as PowerContext)._operator = this.match(CalcParser.POW);
						this.state = 45;
						(_localctx as PowerContext)._right = this.expr(6);
						}
						break;

					case 3:
						{
						_localctx = new MultiplicationContext(new ExprContext(_parentctx, _parentState));
						(_localctx as MultiplicationContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 46;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 47;
						(_localctx as MultiplicationContext)._operator = this.match(CalcParser.MUL);
						this.state = 48;
						(_localctx as MultiplicationContext)._right = this.expr(5);
						}
						break;

					case 4:
						{
						_localctx = new DivisionContext(new ExprContext(_parentctx, _parentState));
						(_localctx as DivisionContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 49;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 50;
						(_localctx as DivisionContext)._operator = this.match(CalcParser.DIV);
						this.state = 51;
						(_localctx as DivisionContext)._right = this.expr(4);
						}
						break;

					case 5:
						{
						_localctx = new AdditionContext(new ExprContext(_parentctx, _parentState));
						(_localctx as AdditionContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 52;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 53;
						(_localctx as AdditionContext)._operator = this.match(CalcParser.ADD);
						this.state = 54;
						(_localctx as AdditionContext)._right = this.expr(3);
						}
						break;

					case 6:
						{
						_localctx = new SubtractionContext(new ExprContext(_parentctx, _parentState));
						(_localctx as SubtractionContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 55;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 56;
						(_localctx as SubtractionContext)._operator = this.match(CalcParser.SUB);
						this.state = 57;
						(_localctx as SubtractionContext)._right = this.expr(2);
						}
						break;
					}
					}
				}
				this.state = 62;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block_stat(): Block_statContext {
		let _localctx: Block_statContext = new Block_statContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CalcParser.RULE_block_stat);
		let _la: number;
		try {
			this.state = 65;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CalcParser.T__2:
				_localctx = new BlockStatContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 49;
				this.match(CalcParser.T__2);
				this.state = 53;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CalcParser.T__6) | (1 << CalcParser.TRUE) | (1 << CalcParser.FALSE) | (1 << CalcParser.LOGICALNOT) | (1 << CalcParser.NUMBER) | (1 << CalcParser.NEWLINE))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (CalcParser.LET - 33)) | (1 << (CalcParser.VAR - 33)) | (1 << (CalcParser.FUNC - 33)) | (1 << (CalcParser.RTN - 33)) | (1 << (CalcParser.ID - 33)) | (1 << (CalcParser.STR - 33)))) !== 0)) {
					{
					{
					this.state = 50;
					(_localctx as BlockStatContext)._body = this.stat();
					}
					}
					this.state = 55;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 56;
				this.match(CalcParser.T__3);
				}
				break;
			case CalcParser.T__4:
				_localctx = new BlockStatContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 57;
				this.match(CalcParser.T__4);
				this.state = 61;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CalcParser.T__6) | (1 << CalcParser.TRUE) | (1 << CalcParser.FALSE) | (1 << CalcParser.LOGICALNOT) | (1 << CalcParser.NUMBER) | (1 << CalcParser.NEWLINE))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (CalcParser.LET - 33)) | (1 << (CalcParser.VAR - 33)) | (1 << (CalcParser.FUNC - 33)) | (1 << (CalcParser.RTN - 33)) | (1 << (CalcParser.ID - 33)) | (1 << (CalcParser.STR - 33)))) !== 0)) {
					{
					{
					this.state = 58;
					(_localctx as BlockStatContext)._body = this.stat();
					}
					}
					this.state = 63;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 64;
				this.match(CalcParser.T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stat(): StatContext {
		let _localctx: StatContext = new StatContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, CalcParser.RULE_stat);
		let _la: number;
		try {
			this.state = 109;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				_localctx = new ExprStatContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 67;
				(_localctx as ExprStatContext)._expression = this.expr(0);
				this.state = 68;
				this.stat_end();
				}
				break;

			case 2:
				_localctx = new DeclareStatContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 70;
				(_localctx as DeclareStatContext)._declare_type = this.declare_types();
				this.state = 71;
				(_localctx as DeclareStatContext)._id = this.match(CalcParser.ID);
				this.state = 72;
				this.match(CalcParser.T__0);
				this.state = 73;
				(_localctx as DeclareStatContext)._type = this.types();
				this.state = 74;
				this.stat_end();
				}
				break;

			case 3:
				_localctx = new DeclareValueStatContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 76;
				(_localctx as DeclareValueStatContext)._declare_type = this.declare_types();
				this.state = 77;
				(_localctx as DeclareValueStatContext)._id = this.match(CalcParser.ID);
				this.state = 78;
				this.match(CalcParser.T__5);
				this.state = 79;
				(_localctx as DeclareValueStatContext)._value = this.expr(0);
				this.state = 80;
				this.stat_end();
				}
				break;

			case 4:
				_localctx = new AssignStatContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 82;
				(_localctx as AssignStatContext)._id = this.match(CalcParser.ID);
				this.state = 83;
				this.match(CalcParser.T__5);
				this.state = 84;
				(_localctx as AssignStatContext)._value = this.expr(0);
				this.state = 85;
				this.stat_end();
				}
				break;

			case 5:
				_localctx = new FuncDeclareStatContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 87;
				this.match(CalcParser.FUNC);
				this.state = 88;
				(_localctx as FuncDeclareStatContext)._id = this.match(CalcParser.ID);
				this.state = 89;
				this.match(CalcParser.T__6);
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === CalcParser.ID) {
					{
					{
					this.state = 90;
					(_localctx as FuncDeclareStatContext)._argument = this.arg_type();
					}
					}
					this.state = 95;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 96;
				this.match(CalcParser.T__7);
				this.state = 97;
				this.match(CalcParser.T__8);
				this.state = 98;
				(_localctx as FuncDeclareStatContext)._type = this.types();
				this.state = 99;
				(_localctx as FuncDeclareStatContext)._body = this.block_stat();
				this.state = 100;
				this.stat_end();
				}
				break;

			case 6:
				_localctx = new ReturnStatContext(_localctx);
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 102;
				this.match(CalcParser.RTN);
				this.state = 103;
				(_localctx as ReturnStatContext)._value = this.expr(0);
				this.state = 104;
				this.stat_end();
				}
				break;

			case 7:
				_localctx = new EmptStatContext(_localctx);
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 106;
				this.match(CalcParser.NEWLINE);
				}
				break;

			case 8:
				_localctx = new EmptStatContext(_localctx);
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 107;
				this.match(CalcParser.NEWLINE);
				this.state = 108;
				this.match(CalcParser.EOF);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExprContext = new ExprContext(this._ctx, _parentState);
		let _prevctx: ExprContext = _localctx;
		let _startState: number = 16;
		this.enterRecursionRule(_localctx, 16, CalcParser.RULE_expr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				_localctx = new NameContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 112;
				this.match(CalcParser.ID);
				}
				break;

			case 2:
				{
				_localctx = new NumberContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 113;
				this.match(CalcParser.NUMBER);
				}
				break;

			case 3:
				{
				_localctx = new TrueContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 114;
				this.match(CalcParser.TRUE);
				}
				break;

			case 4:
				{
				_localctx = new FalseContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 115;
				this.match(CalcParser.FALSE);
				}
				break;

			case 5:
				{
				_localctx = new StringContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 116;
				this.match(CalcParser.STR);
				}
				break;

			case 6:
				{
				_localctx = new ParenthesesContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 117;
				this.match(CalcParser.T__6);
				this.state = 118;
				(_localctx as ParenthesesContext)._inner = this.expr(0);
				this.state = 119;
				this.match(CalcParser.T__7);
				}
				break;

			case 7:
				{
				_localctx = new FuncCallContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 121;
				(_localctx as FuncCallContext)._id = this.match(CalcParser.ID);
				this.state = 122;
				this.match(CalcParser.T__6);
				this.state = 126;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === CalcParser.ID) {
					{
					{
					this.state = 123;
					(_localctx as FuncCallContext)._argument = this.arg_value();
					}
					}
					this.state = 128;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 129;
				this.match(CalcParser.T__7);
				}
				break;

			case 8:
				{
				_localctx = new LogicalNotContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 130;
				(_localctx as LogicalNotContext)._operator = this.match(CalcParser.LOGICALNOT);
				this.state = 131;
				(_localctx as LogicalNotContext)._argument = this.expr(7);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 181;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 179;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
					case 1:
						{
						_localctx = new DecimalContext(new ExprContext(_parentctx, _parentState));
						(_localctx as DecimalContext)._int = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 134;
						if (!(this.precpred(this._ctx, 18))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 18)");
						}
						this.state = 135;
						this.match(CalcParser.T__9);
						this.state = 136;
						(_localctx as DecimalContext)._frac = this.expr(19);
						}
						break;

					case 2:
						{
						_localctx = new EqualContext(new ExprContext(_parentctx, _parentState));
						(_localctx as EqualContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 137;
						if (!(this.precpred(this._ctx, 15))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 15)");
						}
						this.state = 138;
						(_localctx as EqualContext)._operator = this.match(CalcParser.EQUAL);
						this.state = 139;
						(_localctx as EqualContext)._right = this.expr(16);
						}
						break;

					case 3:
						{
						_localctx = new NotEqualContext(new ExprContext(_parentctx, _parentState));
						(_localctx as NotEqualContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 140;
						if (!(this.precpred(this._ctx, 14))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 14)");
						}
						this.state = 141;
						(_localctx as NotEqualContext)._operator = this.match(CalcParser.NOTEQUAL);
						this.state = 142;
						(_localctx as NotEqualContext)._right = this.expr(15);
						}
						break;

					case 4:
						{
						_localctx = new GreaterThanOrEqualContext(new ExprContext(_parentctx, _parentState));
						(_localctx as GreaterThanOrEqualContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 143;
						if (!(this.precpred(this._ctx, 13))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 13)");
						}
						this.state = 144;
						(_localctx as GreaterThanOrEqualContext)._operator = this.match(CalcParser.GREATERTHANOREQUAL);
						this.state = 145;
						(_localctx as GreaterThanOrEqualContext)._right = this.expr(14);
						}
						break;

					case 5:
						{
						_localctx = new LessThanOrEqualContext(new ExprContext(_parentctx, _parentState));
						(_localctx as LessThanOrEqualContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 146;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 147;
						(_localctx as LessThanOrEqualContext)._operator = this.match(CalcParser.LESSTHANOREQUAL);
						this.state = 148;
						(_localctx as LessThanOrEqualContext)._right = this.expr(13);
						}
						break;

					case 6:
						{
						_localctx = new GreaterThanContext(new ExprContext(_parentctx, _parentState));
						(_localctx as GreaterThanContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 149;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 150;
						(_localctx as GreaterThanContext)._operator = this.match(CalcParser.GREATERTHAN);
						this.state = 151;
						(_localctx as GreaterThanContext)._right = this.expr(12);
						}
						break;

					case 7:
						{
						_localctx = new LessThanContext(new ExprContext(_parentctx, _parentState));
						(_localctx as LessThanContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CalcParser.RULE_expr);
						this.state = 152;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 153;
						(_localctx as LessThanContext)._operator = this.match(CalcParser.LESSTHAN);
						this.state = 154;
						(_localctx as LessThanContext)._right = this.expr(11);
						}
						break;
